房间管理 list接口

--- a/product-boot-pig/src/main/resources/application.yml
+++ b/product-boot-pig/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
 # dev 配置
 #spring:
 #  profiles: pro
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
