--- a/product-boot-pig/src/main/resources/application.yml
+++ b/product-boot-pig/src/main/resources/application.yml
@@ -20,3 +20,9 @@ spring:
 upload:
   file:
     path: /home/publish/html/img
+
+api:
+  appId: wx98c69df355fad828 # 小程序ID
+  mchID: 1628655062 # 商户号
+  v2Key: FLKtRVXq75okuzRnzXFh2by00FdBSma5 # APIv2密钥
+  notifyUrl: https://39.101.203.127:8090/wx/pay/notify # 支付成功后的回调地址，域名下来后换成域名
