定时作业完成自动完成预约

--- a/product-boot-pig/src/main/resources/application.yml
+++ b/product-boot-pig/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     show-sql: true
   # 激活 prod
   profiles:
-    active: dev
+    active: pro
 # 也可以同时激活多个 profile
 # spring.profiles.active: prod,proddb,prodlog
 # dev 配置
