--- a/product-boot-pig/src/main/resources/application.yml
+++ b/product-boot-pig/src/main/resources/application.yml
@@ -25,4 +25,4 @@ api:
   appId: wx98c69df355fad828 # 小程序ID
   mchID: 1628655062 # 商户号
   v2Key: FLKtRVXq75okuzRnzXFh2by00FdBSma5 # APIv2密钥
-  notifyUrl: https://xinhang618.com:8090/wx/pay/notify # 支付成功后的回调地址，域名下来后换成域名
+  notifyUrl: https://api.xinhang618.com/wx/pay/notify # 支付成功后的回调地址，域名下来后换成域名
