--- a/product-react-pig/package.json
+++ b/product-react-pig/package.json
@@ -62,6 +62,7 @@
     "react-media": "^1.9.2",
     "react-pdf": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-sound": "^1.2.0",
     "roadhog-api-doc": "^1.1.2",
     "ts-loader": "^9.2.8",
     "umi": "^2.4.4",
